--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -107,63 +107,55 @@
 
 <!-- SEÇÃO PROMOÇÕES -->
 <p class="promo">P R O M O Ç Õ E S </p>
-<ul class="cont-promo">
-    <li class="promocao">
-        <a href="" style="text-decoration: none; color:black">
-            <p class="promo-game">
-                BATTLEFIELD
-            </p>
-            <img src="../assets/img/battle.png" alt="">
-        </a>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="preco">R$ 99,99</p>
-        </a>
-    </li>
+<div class="card">
+    <mat-card class="example-card">
+        <img mat-card-image src="assets/img/battle.png" alt="">
+        <mat-card-content>
+            <h3>BATTLEFIELD</h3>
+        </mat-card-content>
+        <mat-card-actions>
+        <button style="background-color: #218EF2; color: white; border: 1px solid blue; position: inherit;" mat-button>R$ 99,99</button>
+        </mat-card-actions>
+    </mat-card>
 
-    <li class="promocao">
-        <a href="" style="text-decoration: none; color:black">
-            <p class="promo-game">
-                COUNTER STRIKE GO
-            </p>
-            <img src="../assets/img/cs go.png" alt="">  
-        </a>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="preco">R$ 89,90</p>
-        </a>
-    </li>
+    <mat-card class="example-card">
+        <img mat-card-image src="assets/img/cs go.png" alt="">
+        <mat-card-content>
+            <h3>CS GO</h3>
+        </mat-card-content>
+        <mat-card-actions>
+        <button style="background-color: #218EF2; color: white; border: 1px solid blue; position: inherit;" mat-button>R$ 89,90</button>
+        </mat-card-actions>
+    </mat-card>
 
-    <li>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="promo-game">
-                FORTNITE
-            </p>
-            <img src="../assets/img/fortnite.png" alt="">  
-        </a>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="preco">R$ 79,90</p>
-        </a>
-    </li>
+    <mat-card class="example-card">
+        <img mat-card-image src="assets/img/fortnite.png" alt="">
+        <mat-card-content>
+            <h3>FORTNITE</h3>
+        </mat-card-content>
+        <mat-card-actions>
+            <button style="background-color: #218EF2; color: white; border: 1px solid blue; position: inherit;" mat-button>R$ 79,90</button>
+        </mat-card-actions>
+    </mat-card>
 
-    <li>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="promo-game">
-                CALL OF DUTY
-            </p>
-            <img class="cl" src="../assets/img/call.png" alt="">
-        </a>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="preco">R$ 79,90</p>
-        </a>
-    </li>
 
-    <li>
-        <a href="" style="text-decoration: none; color:black">
-            <p class="promo-game">
-                GOD OF WAR
-            </p>
-            <img class="gd" src="../assets/img/gow.png" alt="">
-            <p class="preco">R$ 49,90</p>
-        </a>
-    </li>
-</ul>
+    <mat-card class="example-card">
+        <img class="cl" mat-card-image src="assets/img/call.png" alt="">
+        <mat-card-content>
+            <h3>CALL OF DUTY</h3>
+        </mat-card-content>
+        <mat-card-actions>
+            <button style="background-color: #218EF2; color: white; border: 1px solid blue; position: inherit;" mat-button>R$ 69,90</button>
+        </mat-card-actions>
+    </mat-card>    
 
+    <mat-card class="example-card">
+        <img class="gd" mat-card-image src="assets/img/gow.png" alt="">
+        <mat-card-content>
+            <h3>GOD OF WAR</h3>
+        </mat-card-content>
+        <mat-card-actions>
+            <button style="background-color: #218EF2; color: white; border: 1px solid blue; position: inherit;" mat-button>R$ 49,90</button>
+        </mat-card-actions>
+    </mat-card>  
+</div>
