--- a/ang-game/src/app/views/footer/footer.component.html
+++ b/ang-game/src/app/views/footer/footer.component.html
@@ -64,5 +64,20 @@
             </a>
         </span>        
     </div>
+</mat-toolbar>
 
+<mat-toolbar class="barra">
+    <div class="barra">
+        <span class="barra">
+            <img class="pix1" src="assets/img/logo-pix-icone-256.png" alt="pix">
+                        
+            <img class="paypal1" src="assets/img/money 1.png" alt="paypal">
+                        
+            <img class="master1" src="assets/img/master.png" alt="mastercard">
+                        
+            <img class="amex1" src="assets/img/amex.png" alt="amex">
+                        
+            <img class="amex1" src="assets/img/visa.png" alt="visa"> 
+        </span>
+    </div>
 </mat-toolbar>
