--- a/ang-game/src/app/app.component.html
+++ b/ang-game/src/app/app.component.html
@@ -1,8 +1,11 @@
+<!--
 <app-header></app-header>   
 <app-carousel></app-carousel>
 <app-home></app-home>
 <app-index1></app-index1>
 <app-index2></app-index2>
 <app-index3></app-index3>
-<app-footer></app-footer>
+<app-footer></app-footer> 
+-->
+<app-temp-carousel></app-temp-carousel>
 <router-outlet></router-outlet>
