--- a/ang-game/src/app/views/index1/index1.component.css
+++ b/ang-game/src/app/views/index1/index1.component.css
@@ -37,3 +37,10 @@ body, ul, li, p{
     height: 399px;
     border-bottom:10px solid chartreuse;
 }
+
+@media screen and (max-width:768px) {
+    .img{
+    width: inherit;
+    height: inherit;
+    }
+}
