--- a/ang-game/src/app/views/temp-carousel/temp-carousel.component.css
+++ b/ang-game/src/app/views/temp-carousel/temp-carousel.component.css
@@ -1,1 +1,27 @@
 /*Local Teste*/
+mat-grid-list{
+    grid-gap: 10px;
+}
+body, ul, li, p{
+    list-style: none;
+    font-size: 15pt;
+    font-family: sans-serif;
+}
+
+
+mat-grid-tile {
+    margin-bottom: 20px;
+}
+
+mat-grid-tile .img1{
+    width: 500px;
+    height: 400px;
+    border-bottom:10px solid chartreuse;
+}
+mat-grid-tile .img2{
+    width: 490px;
+    height: 399px;
+    border-bottom:10px solid chartreuse;
+}
+
+
