--- a/ang-game/src/app/views/temp-carousel/temp-carousel.component.html
+++ b/ang-game/src/app/views/temp-carousel/temp-carousel.component.html
@@ -1,1 +1,26 @@
 <!--Local Teste-->
+<mat-grid-list cols="2" rowHeight="2:1.2">
+    <a href="">
+        <mat-grid-tile>
+            <img class="img1" src="assets/img/adaptadores.png" alt="">
+            <a href="">
+                <p>Adaptadores</p>
+            </a>
+        </mat-grid-tile>
+    </a>
+    <a href="">
+        <mat-grid-tile><img class="img2" src="assets/img/caixas de som.png" alt=""></mat-grid-tile>
+    </a>
+    <a href="">
+        <mat-grid-tile><img  class="img2" src="assets/img/joysticks.png" alt=""></mat-grid-tile>
+    </a>
+    <a href="">
+        <mat-grid-tile><img  class="img2" src="assets/img/micros.png" alt=""></mat-grid-tile>
+    </a>
+    <a href="">
+        <mat-grid-tile><img class="img1" src="assets/img/mouse pad.png" alt=""></mat-grid-tile>
+    </a>
+    <a href="">
+        <mat-grid-tile><img class="img1" src="assets/img/suportes.png" alt=""></mat-grid-tile>
+    </a>
+</mat-grid-list>
