--- a/ang-game/src/app/views/temp-carousel/temp-carousel.component.html
+++ b/ang-game/src/app/views/temp-carousel/temp-carousel.component.html
@@ -1,26 +1,64 @@
 <!--Local Teste-->
 <mat-grid-list cols="2" rowHeight="2:1.2">
-    <a href="">
-        <mat-grid-tile>
+    <mat-grid-tile>
+        <div>
             <img class="img1" src="assets/img/adaptadores.png" alt="">
             <a href="">
-                <p>Adaptadores</p>
+                <p style="color: black;">Adaptadores</p>
             </a>
-        </mat-grid-tile>
-    </a>
-    <a href="">
-        <mat-grid-tile><img class="img2" src="assets/img/caixas de som.png" alt=""></mat-grid-tile>
-    </a>
-    <a href="">
-        <mat-grid-tile><img  class="img2" src="assets/img/joysticks.png" alt=""></mat-grid-tile>
-    </a>
-    <a href="">
-        <mat-grid-tile><img  class="img2" src="assets/img/micros.png" alt=""></mat-grid-tile>
-    </a>
-    <a href="">
-        <mat-grid-tile><img class="img1" src="assets/img/mouse pad.png" alt=""></mat-grid-tile>
-    </a>
-    <a href="">
-        <mat-grid-tile><img class="img1" src="assets/img/suportes.png" alt=""></mat-grid-tile>
-    </a>
+        </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/caixas de som.png" alt="">
+            <a href="">
+                <p style="color: black;">Caixas de Som</p>
+            </a>
+        </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/joysticks.png" alt="">
+            <a href="">
+                <p style="color: black;">Joysticks</p>
+            </a>
+        </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/micros.png" alt="">
+            <a href="">
+                <p style="color: black;">Microfones</p>
+            </a>
+        </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/mouse pad.png" alt="">
+            <a href="">
+                <p style="color: black;">Mouses Pad</p>
+            </a>
+        </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/suportes.png" alt="">
+            <a href="">
+                <p style="color: black;">Suportes</p>
+            </a>
+        </div>
+    </mat-grid-tile>
+
+
+
+
+
+
+
+    
 </mat-grid-list>
