--- a/ang-game/src/app/views/index1/index1.component.html
+++ b/ang-game/src/app/views/index1/index1.component.html
@@ -1,115 +1,56 @@
 <h1 class="h11">A C E S S Ó R I O S</h1>
-<div class="flexbox" fxLayout="row" fxLayoutAlign="center center">
-    <div fxFlex="40%">
-        <img class="img1" src="assets/img/adaptadores.png" alt="">
-        <a href="" class="link">
-            <p class="legenda">Adaptadores</p>
-        </a>
-    </div>
+<mat-grid-list cols="2" rowHeight="2:1.2">
+    <mat-grid-tile>
+        <div>
+            <img class="img1" src="assets/img/adaptadores.png" alt="">
+            <a href="">
+                <p style="color: black;">Adaptadores</p>
+            </a>
+        </div>
+    </mat-grid-tile>
 
-    <div fxFlex="40%">
-        <img class="img2" src="assets/img/caixas de som.png" alt="">
-        <a href="" class="link">
-            <p class="legenda">Caixas de Som</p>
-        </a>
-    </div>
-</div>
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/caixas de som.png" alt="">
+            <a href="">
+                <p style="color: black;">Caixas de Som</p>
+            </a>
+        </div>
+    </mat-grid-tile>
 
-<div class="flexbox" fxLayout="row" fxLayoutAlign="center center">
-    <div fxFlex="40%">
-        <img class="img2" src="assets/img/joysticks.png" alt="">
-        <a href="" class="link">
-            <p class="legenda">Joysticks</p>
-        </a>
-    </div>
-    <div fxFlex="40%">
-        <img class="img2" src="assets/img/micros.png" alt="">
-        <a href="" class="link">
-            <p class="legenda">Microfones</p>
-        </a>
-    </div>
-</div>
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/joysticks.png" alt="">
+            <a href="">
+                <p style="color: black;">Joysticks</p>
+            </a>
+        </div>
+    </mat-grid-tile>
 
-<div class="flexbox" fxLayout="row" fxLayoutAlign="center center">
-    <div fxFlex="40%">
-        <img class="img2" src="assets/img/mouse pad.png" alt="">
-        <a href="" class="link">
-            <p class="legenda">Mouses Pad</p>
-        </a>
-    </div>
-    <div fxFlex="40%">
-        <img class="img2" src="assets/img/suportes.png" alt="">
-        <a href="" class="link">
-            <p class="legenda">Suportes</p>
-        </a>
-    </div>
-</div>
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/micros.png" alt="">
+            <a href="">
+                <p style="color: black;">Microfones</p>
+            </a>
+        </div>
+    </mat-grid-tile>
 
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/mouse pad.png" alt="">
+            <a href="">
+                <p style="color: black;">Mouses Pad</p>
+            </a>
+        </div>
+    </mat-grid-tile>
 
-
-<!--
-    <section class="flexbox">
-    <div>
-        <a href="" class="img1">
-            <img src="assets/img/adaptadores.png" alt="">
-        </a>
-        <a href="" class="link">
-            <p>Adaptadores</p>
-        </a>
-    </div>
-
-    <div>
-        <a href="" class="img2">
-            <img src="assets/img/caixas de som.png" alt="">
-        </a>
-        <a href="" class="link">
-            <p>Caixas de Som</p>
-        </a>
-    </div>
-
-    <div>
-        <a href="" class="img3">
-            <img src="assets/img/joysticks.png" alt="">
-        </a>
-        <a href="" class="link">
-            <p>Joysticks</p>
-        </a>
-    </div>
-
-    <div>
-        <a href="" class="img4">
-            <img src="assets/img/microfone.png" alt="">
-        </a>
-        <a href="" class="link2">
-            <p>Microfones</p>
-        </a>
-    </div>
-
-    <div>
-        <a href="" class="img5">
-            <img src="assets/img/mouse pad.png" alt="">
-        </a>
-        <a href="" class="link">
-            <p>Mouses Pad</p>
-        </a>
-    </div>
-
-    <div>
-        <a href="" class="img6">
-            <img src="assets/img/suportes.png" alt="">
-        </a>
-        <a href="" class="link">
-            <p>Suportes</p>
-        </a>
-    </div>
-
-    <div>
-        <a href="" class="img1">
-            <img src="assets/img/web cam.png" alt="">
-        </a>
-        <a href="" class="link">
-            <p>Web Cam</p>
-        </a>
-    </div>
-</section>
--->
+    <mat-grid-tile>
+        <div>
+            <img class="img2" src="assets/img/suportes.png" alt="">
+            <a href="">
+                <p style="color: black;">Suportes</p>
+            </a>
+        </div>
+    </mat-grid-tile> 
+</mat-grid-list>
