--- a/ang-game/src/app/views/index1/index1.component.html
+++ b/ang-game/src/app/views/index1/index1.component.html
@@ -1,5 +1,5 @@
 <h1 class="h11">A C E S S Ó R I O S</h1>
-<mat-grid-list cols="2" rowHeight="2:1.2">
+<mat-grid-list cols="2" rowHeight="2:1.2" style="position: inherit;">
     <mat-grid-tile>
         <div>
             <img class="img1" src="assets/img/adaptadores.png" alt="">
