--- a/ang-game/src/app/views/index2/index2.component.css
+++ b/ang-game/src/app/views/index2/index2.component.css
@@ -11,6 +11,8 @@ h1{
     text-align: center;
     color: white;
     background-color: #1D0606;
+    margin-top: 80px;
+    margin-bottom: 20px;
 }
 
 .card{
