--- a/ang-game/src/app/views/index2/index2.component.css
+++ b/ang-game/src/app/views/index2/index2.component.css
@@ -4,6 +4,8 @@ body, ul, li, p{
     list-style: none;
     font-size: 12pt;
     font-family: sans-serif;
+    text-decoration: none;
+    position: inherit;
 }
 h1{
     margin-left: 5%;
