--- a/ang-game/src/app/views/index1/index1.component.html
+++ b/ang-game/src/app/views/index1/index1.component.html
@@ -1,56 +1,58 @@
 <h1 class="h11">A C E S S Ó R I O S</h1>
-<mat-grid-list cols="2" rowHeight="2:1.2" style="position: inherit;">
-    <mat-grid-tile>
-        <div>
-            <img class="img1" src="assets/img/adaptadores.png" alt="">
-            <a href="">
-                <p style="color: black;">Adaptadores</p>
-            </a>
-        </div>
-    </mat-grid-tile>
+<div class="grid">
+    <mat-grid-list class="lista" cols="2" rowHeight="2:1.2" style="position: inherit;">
+        <mat-grid-tile>
+            <div>
+                <img class="img1" src="assets/img/adaptadores.png" alt="">
+                <a href="">
+                    <p style="color: black;">Adaptadores</p>
+                </a>
+            </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/caixas de som.png" alt="">
-            <a href="">
-                <p style="color: black;">Caixas de Som</p>
-            </a>
-        </div>
-    </mat-grid-tile>
+        <mat-grid-tile>
+            <div>
+                <img class="img2" src="assets/img/caixas de som.png" alt="">
+                <a href="">
+                    <p style="color: black;">Caixas de Som</p>
+                </a>
+            </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/joysticks.png" alt="">
-            <a href="">
-                <p style="color: black;">Joysticks</p>
-            </a>
-        </div>
-    </mat-grid-tile>
+        <mat-grid-tile>
+            <div>
+                <img class="img2" src="assets/img/joysticks.png" alt="">
+                <a href="">
+                    <p style="color: black;">Joysticks</p>
+                </a>
+            </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/micros.png" alt="">
-            <a href="">
-                <p style="color: black;">Microfones</p>
-            </a>
-        </div>
-    </mat-grid-tile>
+        <mat-grid-tile>
+            <div>
+                <img class="img2" src="assets/img/micros.png" alt="">
+                <a href="">
+                    <p style="color: black;">Microfones</p>
+                </a>
+            </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/mouse pad.png" alt="">
-            <a href="">
-                <p style="color: black;">Mouses Pad</p>
-            </a>
-        </div>
-    </mat-grid-tile>
+        <mat-grid-tile>
+            <div>
+                <img class="img2" src="assets/img/mouse pad.png" alt="">
+                <a href="">
+                    <p style="color: black;">Mouses Pad</p>
+                </a>
+            </div>
+        </mat-grid-tile>
 
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/suportes.png" alt="">
-            <a href="">
-                <p style="color: black;">Suportes</p>
-            </a>
-        </div>
-    </mat-grid-tile> 
-</mat-grid-list>
+        <mat-grid-tile>
+            <div>
+                <img class="img2" src="assets/img/suportes.png" alt="">
+                <a href="">
+                    <p style="color: black;">Suportes</p>
+                </a>
+            </div>
+        </mat-grid-tile> 
+    </mat-grid-list>
+</div>
