--- a/ang-game/src/app/views/header/header.component.css
+++ b/ang-game/src/app/views/header/header.component.css
@@ -12,16 +12,11 @@ a, ul, li{
     align-items: center;  
     background-image: linear-gradient(#218EF2, black);
 }
-.header a{
-    align-items: center;
-    text-decoration: none;
-}
 
 .joy{
     height: 50px;
     width: 60px;
 }
-
 .title{
     padding-left: 360px;
 }
@@ -41,12 +36,32 @@ a, ul, li{
 }
 
 @media screen and (max-width: 768px) {
-    .position-header, .position-footer{
-        width: 100%;
+    .header{
         position: fixed;
+        top: 0;
+        height: 55px;
+        align-items: center;  
+        background-image: linear-gradient(black,#218EF2);
     }
     .joy{
         height: 45px;
         width: 40px;
+    }
+    .title{
+        padding-left: 50px;
+    }
+    .logoo{
+        height: 50px;
+        width: 200px;
+    }
+    .header .box{
+        margin-left: 70px;
+        color: red;
+        vertical-align: middle;
+    }
+    .box{
+        border-radius: 10px;
+        height: 45px;
+        background-color: white;
     }
 }
