--- a/ang-game/src/app/views/index3/index3.component.html
+++ b/ang-game/src/app/views/index3/index3.component.html
@@ -117,3 +117,16 @@
     </div>
   </div>
 </div>
+
+<body class="letra">
+  <div class="container2">
+      <div class="estatico">Loja Física </div>
+      <ul class="dinamico">
+         <li><span>ENDEREÇO</span></li>
+         <li><span>RUA STEVE JOBS JUNIOR</span></li>
+         <li><span>Nº 999</span></li>
+         <li><span>CIDADE DEVS</span></li>
+
+       </ul>
+    </div>
+</body>
