--- a/ang-game/src/app/views/index3/index3.component.css
+++ b/ang-game/src/app/views/index3/index3.component.css
@@ -20,3 +20,66 @@
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    background: #111111;
+}
+.container2{
+    display: inline-flex;
+}
+.container2 .estatico{
+    color: #fff;
+    font-size: 60px;
+    font-weight: 400;
+}
+.container2 .dinamico{
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    overflow: hidden;
+}
+.dinamico li{
+    color: #fc6d6f;
+    list-style: none;
+    font-size: 60px;
+    font-weight: 500;
+    left: 0;
+    position: relative;
+    top: 0;
+    animation: slide 10s steps(4) infinite;
+}
+@keyframes slide{
+    100%{
+        top: -360px;
+    }
+}
+.dinamico li span::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2px solid #fc6d6f;
+    animation: typing 1.5s steps(15) infinite;
+    background: #111111;
+}
+.dinamico li span{
+    position: relative;
+}
+@keyframes typing{
+    100%{
+        left: 110%;
+        margin: 0 -1px 0 1px;
+        /*PRESTAR ATENÇÃO ACIMA*/
+    }
+}
