--- a/ang-game/src/app/views/temp-carousel/temp-carousel.component.css
+++ b/ang-game/src/app/views/temp-carousel/temp-carousel.component.css
@@ -1,22 +1,66 @@
 /*Local Teste*/
-body, ul, li, p{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+}
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #111111;
+}
+.container{
+    display: inline-flex;
+}
+
+.container .estatico{
+    color: #fff;
+    font-size: 60px;
+    font-weight: 400;
+}
+.container .dinamico{
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    overflow: hidden;
+}
+.dinamico li{
+    color: #fc6d6f;
     list-style: none;
-    text-decoration: none;
-    font-size: 15pt;
-    font-family: sans-serif;
-    margin-bottom: 20px;
+    font-size: 60px;
+    font-weight: 500;
+    left: 0;
+    position: relative;
+    top: 0;
+    animation: slide 10s steps(4) infinite;
 }
-
-
-mat-grid-tile .img1{
-    width: 500px;
-    height: 400px;
-    border-bottom:10px solid chartreuse;
+@keyframes slide{
+    100%{
+        top: -360px;
+    }
 }
-mat-grid-tile .img2{
-    width: 490px;
-    height: 399px;
-    border-bottom:10px solid chartreuse;
+.dinamico li span::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2px solid #fc6d6f;
+    animation: typing 1.5s steps(15) infinite;
+    background: #111111;
 }
-
-
+.dinamico li span{
+    position: relative;
+}
+@keyframes typing{
+    100%{
+        left: 110%;
+        margin: 0 -1px 0 1px;
+        /*PRESTAR ATENÇÃO ACIMA*/
+    }
+}
