--- a/ang-game/src/app/views/temp-carousel/temp-carousel.component.html
+++ b/ang-game/src/app/views/temp-carousel/temp-carousel.component.html
@@ -1,64 +1,13 @@
 <!--Local Teste-->
-<mat-grid-list cols="2" rowHeight="2:1.2">
-    <mat-grid-tile>
-        <div>
-            <img class="img1" src="assets/img/adaptadores.png" alt="">
-            <a href="">
-                <p style="color: black;">Adaptadores</p>
-            </a>
-        </div>
-    </mat-grid-tile>
+<body>
+    <div class="container">
+        <div class="estatico">Loja Física </div>
+        <ul class="dinamico">
+           <li><span>ENDEREÇO</span></li>
+           <li><span>RUA STEVE JOBS JUNIOR</span></li>
+           <li><span>Nº 999</span></li>
+           <li><span>CIDADE DEVS</span></li>
 
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/caixas de som.png" alt="">
-            <a href="">
-                <p style="color: black;">Caixas de Som</p>
-            </a>
-        </div>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/joysticks.png" alt="">
-            <a href="">
-                <p style="color: black;">Joysticks</p>
-            </a>
-        </div>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/micros.png" alt="">
-            <a href="">
-                <p style="color: black;">Microfones</p>
-            </a>
-        </div>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/mouse pad.png" alt="">
-            <a href="">
-                <p style="color: black;">Mouses Pad</p>
-            </a>
-        </div>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-        <div>
-            <img class="img2" src="assets/img/suportes.png" alt="">
-            <a href="">
-                <p style="color: black;">Suportes</p>
-            </a>
-        </div>
-    </mat-grid-tile>
-
-
-
-
-
-
-
-    
-</mat-grid-list>
+         </ul>
+      </div>
+</body>
