--- a/ang-game/src/app/views/index2/index2.component.html
+++ b/ang-game/src/app/views/index2/index2.component.html
@@ -93,8 +93,8 @@
 
 <div id="espaco-novidades" class="content-news">
     <div *ngFor="let novidade of listaNovidades" class="card">
-        <img [src]=novidade.imagem alt="Foto Game">
-        <h3>{{novidade.titulo}}</h3>
-        <p>{{novidade.texto}}</p>
+        <img [src]=noticias.imagem alt="Foto Game">
+        <h3>{{noticias.titulo}}</h3>
+        <p>{{noticias.texto}}</p>
 </div>
         
