--- a/ang-game/src/app/app.component.html
+++ b/ang-game/src/app/app.component.html
@@ -8,4 +8,12 @@
 <app-index3></app-index3>
 <app-footer></app-footer> 
 <router-outlet></router-outlet>
+
+<div id="espaco-noticias" class="content-news">
+    <div *ngFor="let noticia of listaNoticias" class="cardnews">
+        <img src="" alt="imagem novidades">
+        <h3>titulo</h3>
+        <p>descricao</p>
+    </div>
+</div>
 -->
