--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -1,5 +1,13 @@
 <!--SEÇÃO GAMER-->
 
+<div id="espaco-noticias" class="content-news">
+    <div ngForm="let noticia of listaNoticias" class="cardnews">
+        <img src="" alt="Foto da novidade">
+        <h3>titulo</h3>
+        <p>descricao</p>
+    </div>
+</div>
+
 <p class="gamer">G A M E R</p>
 <ul class="container">
     <li class="bloco">
