--- a/ang-game/src/app/views/login/login.component.html
+++ b/ang-game/src/app/views/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<main>
+    <form #userForm="ngForm" (ngSubmit)="onSubmit()">
+        <div class="campo-label">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" [(ngModel)]="loginModel.email">    
+        </div>
+        <div class="campo-label">
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" [(ngModel)]="loginModel.password">
+        </div>
+    
+        <input type="submit" id="botao-enviar" value="Fazer Login">
+    </form>
+</main>
